--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="pl-md-4 col-md-9">
                     <h6 class="title">Ernest Ehiz</h6>
                     <p class="subtitle">ABOUT ME</p>
-                    <p>rnest Ehiz is a versatile and creative Web Developer and Designer
+                    <h1>rnest Ehiz is a versatile and creative Web Developer and Designer
 			    with over 2 years of experience crafting beautiful, responsive,
 			    and user-centric websites. Blending technical expertise with
 			    an eye for design, Ernest brings concepts to life turning
@@ -99,7 +99,7 @@
                         With a solid command of HTML, CSS, JavaScript, and design tools
 			    like Figma and Adobe XD, Ernest bridges the gap between design
 			    and development. He ensures that every project he touches is not
-			    only aesthetically appealing but also technically sound and performance-optimized.</p>
+			    only aesthetically appealing but also technically sound and performance-optimized.</h1>
                                   
                 </div>
             </div>
@@ -158,10 +158,10 @@
             <h6 class="section-title mb-4">Why Choose me</h6>
             <p class="mb-5 pb-4">
                 I bring a unique blend of web development and design skills, 
-                allowing me to take projects from idea to fully functional,<br> 
+                allowing me to take projects from idea to fully functional,
                 visually stunning websites. With over 2 years of experience,
                  I focus on creating user-friendly, responsive, and
-                  high-performing websites that not only look great<br> but work seamlessly across all devices.
+                  high-performing websites that not only look great but work seamlessly across all devices.
 What sets me apart is my attention to detail, strong sense of visual
  design, and ability to write clean, efficient code. I'm committed to
   clear communication, on-time delivery, and always staying up-to-date
