--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="pl-md-4 col-md-9">
                     <h6 class="title">Ernest Ehiz</h6>
                     <p class="subtitle">ABOUT ME</p>
-                    <h1>rnest Ehiz is a versatile and creative Web Developer and Designer
+                    <p>rnest Ehiz is a versatile and creative Web Developer and Designer
 			    with over 2 years of experience crafting beautiful, responsive,
 			    and user-centric websites. Blending technical expertise with
 			    an eye for design, Ernest brings concepts to life turning
@@ -99,7 +99,7 @@
                         With a solid command of HTML, CSS, JavaScript, and design tools
 			    like Figma and Adobe XD, Ernest bridges the gap between design
 			    and development. He ensures that every project he touches is not
-			    only aesthetically appealing but also technically sound and performance-optimized.</h1>
+			    only aesthetically appealing but also technically sound and performance-optimized.</p>
                                   
                 </div>
             </div>
