--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with Steller landing page.">
+    <meta name="description" content="You are welcome to ernest portfolio.">
     <meta name="author" content="Devcrud">
     <title>Portfolio</title>
     <!-- font icons -->
