--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <div class="custom-card card border">
                         <div class="card-body">
                             <i class="icon ti-bar-chart"></i>
-                            <h5>SEO(Search engine optimization)</h5>
+                            <h5>SEO</h5>
                         </div>
                     </div>
                 </div>
