--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="pl-md-4 col-md-9">
                     <h6 class="title">Ernest Ehiz</h6>
                     <p class="subtitle">ABOUT ME</p>
-                    <p>rnest Ehiz is a versatile and creative Web Developer and Designer
+                    <p>A versatile and creative Web Developer and Designer
 			    with over 2 years of experience crafting beautiful, responsive,
 			    and user-centric websites. Blending technical expertise with
 			    an eye for design, Ernest brings concepts to life turning
