--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ What sets me apart is my attention to detail, strong sense of visual
                 <div class="form">
                     <h6 class="subtitle">Available 24/7</h6>
                     <h6 class="section-title mb-4">Get In Touch</h6>
-                    <form action="mailto:danielsamuel1662@mail.com" method="post">
+                    <form action="mailto:ehizernest@gmail.com" method="post">
                         <div class="form-group">
                             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" required>
                         </div>
